--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
         </div>
       </section>
 
-      <section class="about small" id="about">
+      <section class="about" id="about">
         <div class="container">
           <h2 class="text-center fw-bold title-color mb-5">About Us</h2>
-          <div class="info d-flex gap-5 flex-wrap">
-            <div class="central">
+          <div class="info row justify-content-between">
+            <div class="central col-12 col-md-6">
               <h3 class="mb-5">Who Is Mass Technology Solutions?</h3>
-              <p class="lh-lg text-color">
+              <p class="lh-lg text-color fs-5">
                 Mass Technology is an IT company established in 2018 specialized
                 in ERP Solutions and the other business related programs to help
                 and assist customers to use the best practice of the software
@@ -219,7 +219,19 @@
                 support services and technical support services.
               </p>
             </div>
-            <div class="side">
+            <div
+              class="image-holder col-md-5 d-none d-md-block overflow-hidden px-0 rounded-5"
+            >
+              <img src="images/about-us-1.jpg" alt="" />
+            </div>
+          </div>
+          <div class="side mt-5 row justify-content-between">
+            <div
+              class="image-holder col-md-5 d-none d-md-block overflow-hidden"
+            >
+              <img class="rounded-5" src="images/about-us-2.jpg" alt="" />
+            </div>
+            <div class="info col-12 col-md-6">
               <div class="mission mb-5">
                 <h3 class="mb-4">Our Mission</h3>
                 <p class="lh-lg text-color">
