--- a/index.html
+++ b/index.html
@@ -225,13 +225,14 @@
               <img src="images/about-us-1.jpg" alt="" />
             </div>
           </div>
+
           <div class="side mt-5 row justify-content-between">
             <div
               class="image-holder col-md-5 d-none d-md-block overflow-hidden"
             >
               <img class="rounded-5" src="images/about-us-2.jpg" alt="" />
             </div>
-            <div class="info col-12 col-md-6">
+            <div class="info fs-5 col-12 col-md-6">
               <div class="mission mb-5">
                 <h3 class="mb-4">Our Mission</h3>
                 <p class="lh-lg text-color">
