centering images about

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <section class="about" id="about">
         <div class="container">
           <h2 class="text-center fw-bold title-color mb-5">About Us</h2>
-          <div class="info row justify-content-between">
+          <div class="info row justify-content-between align-items-center">
             <div class="central col-12 col-md-6">
               <h3 class="mb-5">Who Is Mass Technology Solutions?</h3>
               <p class="lh-lg text-color fs-5">
@@ -219,17 +219,13 @@
                 support services and technical support services.
               </p>
             </div>
-            <div
-              class="image-holder col-md-5 d-none d-md-block overflow-hidden px-0 rounded-5"
-            >
-              <img src="images/about-us-1.jpg" alt="" />
+            <div class="image-holder col-md-5 d-none d-md-block">
+              <img class="rounded-5" src="images/about-us-1.jpg" alt="" />
             </div>
           </div>
 
-          <div class="side mt-5 row justify-content-between">
-            <div
-              class="image-holder col-md-5 d-none d-md-block overflow-hidden"
-            >
+          <div class="side mt-5 row justify-content-between align-items-center">
+            <div class="image-holder col-md-5 d-none d-md-block">
               <img class="rounded-5" src="images/about-us-2.jpg" alt="" />
             </div>
             <div class="info fs-5 col-12 col-md-6">
