add why us section

--- a/html/clients.html
+++ b/html/clients.html
@@ -77,203 +77,203 @@
           </h2>
           <div class="boxs">
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/alnasagoon.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/axa.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/asfour.png" alt="" />
             </div>
 
             <div
-              class="image-holder bigger d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 bigger d-flex align-items-center justify-content-center"
             >
               <img src="../images/british.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/saudi(2).png" alt="" />
             </div>
 
             <div
-              class="image-holder bigger d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 bigger d-flex align-items-center justify-content-center"
             >
               <img src="../images/altaamiir.jpg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/white.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/edita.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/cairo-capital-securities.jpg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/alpha.jpg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/lilly.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/alasli.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/heliopolis star.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/alsahm.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/ports.png" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/hellman.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/midsteel.jpg" alt="" />
             </div>
 
             <div
-              class="image-holder bigger d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 bigger d-flex align-items-center justify-content-center"
             >
               <img src="../images/high-fashion-stores.jpg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/panda.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/delta-pharma.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/flamingo.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/seaharvest.png" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/delta-carbon.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/western.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/koora.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/cement.jpeg" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/cmb.png" alt="" />
             </div>
             <div
-              class="image-holder bigger d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 bigger d-flex align-items-center justify-content-center"
             >
               <img src="../images/abco.jpeg" alt="" />
             </div>
 
             <div
-              class="image-holder bigger d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 bigger d-flex align-items-center justify-content-center"
             >
               <img src="../images/alreef.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/modern-motors.png" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/speakol.png" alt="" />
             </div>
 
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/heliopolis mining.jpeg" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/alnasr.png" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/dandy.png" alt="" />
             </div>
             <div
-              class="image-holder d-flex align-items-center justify-content-center"
+              class="image-holder shadow-lg p-1 rounded-4 d-flex align-items-center justify-content-center"
             >
               <img src="../images/startex.png" alt="" />
             </div>
@@ -301,6 +301,9 @@
               <a class="text-white" href="../index.html#partnerships"
                 >PartnerShips</a
               >
+            </li>
+            <li>
+              <a class="text-white" href="products.html#why">Why Us</a>
             </li>
           </ul>
 
