--- a/html/contact.html
+++ b/html/contact.html
@@ -225,6 +225,9 @@
                 >PartnerShips</a
               >
             </li>
+            <li>
+              <a class="text-white" href="products.html#why">Why Us</a>
+            </li>
           </ul>
 
           <div class="information col-12 col-md-4 text-white">
