--- a/html/products.html
+++ b/html/products.html
@@ -217,6 +217,27 @@
           </div>
         </div>
       </section>
+      <section class="why" id="why">
+        <div class="container">
+          <h2 class="text-center title-color fw-bold mb-5">Why Us</h2>
+          <ul class="info fs-5 text-center">
+            <li class="list-unstyled shadow-lg rounded-4 p-4">
+              What make us unique are our abilities, professionalism gained by
+              long years of experience and long term relationships with our
+              customers.
+            </li>
+            <li class="list-unstyled shadow-lg rounded-4 p-4">
+              We’ve a great focus and concern about our customers with very
+              talented and experienced staff whose main target is customer
+              satisfaction and successful businessrelations.
+            </li>
+            <li class="list-unstyled shadow-lg rounded-4 p-4">
+              We’ve a strong believe in our staff, our customers as we know
+              that’s what makes the difference.
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="bg-black py-2">
       <div class="container">
@@ -238,6 +259,9 @@
               <a class="text-white" href="../index.html#partnerships"
                 >PartnerShips</a
               >
+            </li>
+            <li>
+              <a class="text-white" href="products.html#why">Why Us</a>
             </li>
           </ul>
 
