--- a/index.html
+++ b/index.html
@@ -219,13 +219,15 @@
                 support services and technical support services.
               </p>
             </div>
-            <div class="image-holder col-md-5 d-none d-md-block">
+            <div class="image-holder col-md-5 col-12">
               <img class="rounded-5" src="images/about-us-1.jpg" alt="" />
             </div>
           </div>
 
-          <div class="side mt-5 row justify-content-between align-items-center">
-            <div class="image-holder col-md-5 d-none d-md-block">
+          <div
+            class="side mt-5 row justify-content-between align-items-center flex-wrap-reverse"
+          >
+            <div class="image-holder col-md-5 col-12">
               <img class="rounded-5" src="images/about-us-2.jpg" alt="" />
             </div>
             <div class="info fs-5 col-12 col-md-6">
@@ -282,6 +284,9 @@
             <li><a class="text-white" href="#about">About Us</a></li>
             <li>
               <a class="text-white" href="#partnerships">PartnerShips</a>
+            </li>
+            <li>
+              <a class="text-white" href="html/products.html#why">Why Us</a>
             </li>
           </ul>
 
