--- a/html/contact.html
+++ b/html/contact.html
@@ -179,9 +179,10 @@
                 <strong class="title">Postal Code:</strong>
                 12566
               </div>
-              <div class="mb-3 d-flex">
-                <strong class="title">Mobile:</strong>
-                (010)18508850 – (010)22558996 – (010)13060239
+
+              <div class="mb-2 d-flex">
+                <div class="title fw-bold">Mobile:</div>
+                01018508850 – 01022558996 – 01013060239
               </div>
 
               <div class="mb-3 d-flex">
@@ -243,7 +244,7 @@
 
             <div class="mb-2 d-flex">
               <div class="title fw-bold">Mobile:</div>
-              (010)18508850 - (010)22558996 - (010)13060239
+              01018508850 – 01022558996 – 01013060239
             </div>
 
             <div class="mb-3 d-flex">
